# mentorx

./: .env.example  .gitignore  AI_AGENT_API_SPEC.md  AI_AGENT_ARCHITECTURE.md  AI_AGENT_DATABASE_SCHEMA.md  AI_AGENT_EXECUTION_PLAN.md  AI_AGENT_LITELLM_GROQ_SETUP.md  AI_AGENT_PLAN.md  AI_AGENT_PROMPTS.md  CLAUDE.md  README.md
services/api/: Dockerfile  pyproject.toml
services/api/alembic/versions/: 20260504_01_ai_prep_phase1.py
services/api/app/: main.py
services/api/app/core/: config.py  database.py  deps.py  rbac.py  security.py
services/api/app/models/: __init__.py  ai_prep.py  category.py  chat_message.py  chat_thread.py  dispute.py  manager_scope.py  mentor_profile.py  notification.py  payment.py  practice_test.py  profile.py  resource.py  review.py  session.py  session_file.py  session_message.py  session_recording.py  session_recording_visibility.py  user.py
services/api/app/routers/: __init__.py  admin.py  ai.py  ai_chat.py  auth.py  bookings.py  categories.py  chats.py  mentors.py  notifications.py  payments.py  practice.py  resources.py  reviews.py  sessions.py  uploads.py  users.py  webhooks.py
services/api/app/schemas/: admin.py  ai.py  ai_chat_v1.py  auth.py  category.py  chat.py  chat_thread.py  mentor.py  notification.py  payment.py  practice.py  profile.py  recording.py  resource.py  review.py  session.py  upload.py  user.py
services/api/app/services/: ai_prep_memory_service.py  ai_service.py  bootstrap_service.py  livekit_service.py  llm_client.py  notification_service.py  payment_service.py  recording_service.py  storage_service.py  (+1 more)
(+67 files in other folders)
