[project]
name = "exammentor-api"
version = "0.1.0"
description = "ExamMentor FastAPI backend"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "redis>=5.0",
  "boto3>=1.34",
  "google-api-python-client>=2.130",
  "google-auth>=2.30",
  "google-auth-oauthlib>=1.2",
  "openai>=1.35",
  "livekit-api>=0.8.1",
  "email-validator>=2.1",
]

[tool.uvicorn]
factory = true

